# mediamaster-v2

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: main.py
api/models/: schemas.py
api/routes/: analytics.py  health.py  platforms.py  post.py  schedule.py
config/: config.example.yaml  pyvenv.cfg
docs/: PHASE1_REPORT.md  PHASE2_REPORT.md
examples/: basic_usage.py
src/mediamasterv2/: __init__.py
src/mediamasterv2/api/: dependencies.py  lifespan.py  main.py  routes.py  schemas.py
src/mediamasterv2/core/: __init__.py  base.py  config.py  factory.py
src/mediamasterv2/workflows/: analytics.py  publish.py  schedule.py
tests/: conftest.py
tests/api/: test_routes.py
tests/integration/: test_postiz_adapter.py
tests/unit/: test_core.py  test_youtube_connector.py
tests/workflows/: test_workflows.py
workflows/: analytics.py  publish.py  schedule.py  state.py
